deps/v8/test/message/fail/invalid-spread-2.out
*%(basename)s:7: SyntaxError: Unexpected token ...
(x, ...y, z)
    ^^^
SyntaxError: Unexpected token ...
